--- a/Chapter14.Rmd
+++ b/Chapter14.Rmd
@@ -147,7 +147,7 @@ John Lawrence at Iowa State examines the historical profitability of backgroundi
 
 Into an Excel spreadsheet, download futures prices for January 2015 Feeder Cattle futures prices ([CME/FCF2015](https://www.quandl.com/data/CME/FCF2015-Feeder-Cattle-Futures-January-2015-FCF2015)), March 2015 Corn futures prices ([CME/CH2015](https://www.quandl.com/data/CME/CH2015-Corn-Futures-March-2015-CH2015)), and June 2015 Live Cattle futures prices ([CME/LCM2015](https://www.quandl.com/data/CME/LCM2015-Live-Cattle-Futures-June-2015-LCM2015)) from Quandl.com.
 
-1. Suppose you perform risk management for a large feedlot in Western Kansas. You plan to buy 266 feeder cattle on December 20th, 2014 and feed them out to market weight when you will sell them to a packer on May 20, 2015. You need to hedge exposure to the price risk you face in feeding the steers to market weight. 
+1. Suppose you perform risk management for a large feedlot in Western Kansas. You decide on December 1st, 2014 that you will buy 266 feeder cattle on December 20th, 2014 and feed them out to market weight when you will sell them to a packer on May 20, 2015. You need to hedge exposure to the price risk you face in feeding the steers to market weight. 
 
     a. State the futures trades you will make to put on a cattle crush spread and hedge this price risk. Note the contracts bought/sold, and the dates on which you buy/sell to open and sell/buy to close your futures positions. 
     b. Calculate the gain or loss in your futures position as of May 20, 2015.
