--- a/lecture17.Rmd
+++ b/lecture17.Rmd
@@ -1,14 +1,8 @@
 ---
-title: 'Chapter 16: Crude Oil and the Crack Spread'
-csl: american-journal-of-agricultural-economics.csl.txt
-output:
-  html_document:
-    fig_caption: yes
-    toc: yes
-  word_document: default
-bibliography: PriceAnalysis.bib
+title: "ACE 427 Commodity Price Analysis and Forecasting"
+output: slidy_presentation
+theme: uulm
 ---
-
 
 # [Return to Book Homepage](http://mindymallory.github.io/PriceAnalysis/)
 
@@ -22,9 +16,15 @@ Crude oil is an extremely important commodity. Much of the world's economic acti
 
 Not all crude oil is created equal. The components that make up the material can vary greatly affecting what kinds of products crude oil can be refined into. For example, if the crude oil is composed of large hydrocarbon molecules, it is referred to as *heavy* crude oil. Crude oil that has mainly smaller molecules is called *light* crude oil. Light crude oil can be more easily turned into higher valued gasoline and distillates while heavy crude oil produces more lubricating oil and coke. 
 
+# Classifying Crude Oil: Light versus Heavy and Sweet versus Sour
+
 Light crude oil flows more freely, while heavy crude oil is more viscous. Specifically, the American Petroleum Institute gravity (API gravity) is a measure of how heavy crude oil is compared to water. If API gravity is greater than 10 the crude oil will float on water. If it is less than 10 the crude oil will sink. Crude oil is considered light if it has an API gravity higher than 31.1 degrees.      
 
+# Classifying Crude Oil: Light versus Heavy and Sweet versus Sour
+
 Crude oil is also classified as *sweet* or *sour*. This refers to the sulfur content of the crude oil. Sweet crude oil contains less than 0.5% sulfur. It is easier to refine because sulfur does not need to be removed. Sulfur content of diesel is regulated and diesel fuel in the US and Europe have limited the quantity of sulfur allowed, so sweet crude oil is valued more highly than sour crude oil. 
+
+# Classifying Crude Oil: Light versus Heavy and Sweet versus Sour
 
 Sulfur is also highly corrosive, increasing the cost of maintaining refineries, and exposure to hydrogen sulfide is dangerous, so it must be removed from sour crude oil before transporting. 
 
@@ -48,6 +48,7 @@ The EIA states that crude oil is produced in 31 U.S. states and in U.S. coastal 
 
 Source: [US Energy Information Administration](http://www.eia.gov/Energyexplained/index.cfm?page=oil_home) 
 
+## Light, Sweet: WTI and Brent Crude Oil
 
 Brent Crude Oil
 
@@ -56,6 +57,8 @@ Brent Crude Oil
 ![Brent Crude Oil Map](images/Brent_crude_oil_map (1).png)
 
 Source: [US Energy Information Administration](http://www.eia.gov/countries/cab.cfm?fips=UK) Public domain, via Wikimedia Commons
+
+# Production
 
 Globally, the top five oil producing countries are: Russia, the United States, Saudi Arabia, China, and Canada. 
 
@@ -66,6 +69,8 @@ Source: [US Energy Information Administration](http://www.eia.gov/Energyexplaine
 # Refining Crude Oil
 
 The exact proportions of refined products that can be produced from a barrel of oil can be varied by changing to refining process if one product is preferred over another. However, higher valued products are more costly to produce, and the proportions can only be varied to an extent. Refiners could never produce 100% gasoline from a barrel of oil, for example. 
+
+# Refining Crude Oil
 
 The characteristics of the oil described above (light/heavy and sweet/sour) impact the proportion of products possible. The figure below shows the rough yield of various refined products from a 42 gallon barrel of oil. 
 
@@ -91,6 +96,9 @@ The following figure shows WTI and Brent monthly spot prices from May 1987 to Oc
 
 Prices experienced a dramatic uptrend then downtrend in 2008-2009 that was experienced across many commodities. Most recently, crude oil prices have been in a severe downturn. The recent downtrend has been characterized by a historically unprecedented divergence between WTI and Brent crude oil prices. 
 
+# Historical Price Trends
+
+
 ![Brent - WTI Price Spread](crudeoil_files/image005.png)
 
 Recall that WTI is a North American benchmark for light sweet crude oil, while Brent is a European benchmark for light sweet crude oil. In the next section we will discuss how rapidly increasing production in the U.S. Bakkan formation of North Dakota has contributed to weak price levels and historically weak WTI price compared to the Brent price. 
@@ -104,6 +112,8 @@ A number of supply and demand statistics are maintained by the Energy Informatio
 The figure below shows U.S. field production of Crude oil in thousand barrels per day. Production was in a downward trend since the mid 1980's, but since about 2008 production has rapidly increased. This is due to extensive drilling in the Bakkan formation after hydrolic fracturing techniques were developed to enable cost effective extraction. 
 
 ![U.S. Field Production of Crude Oil, Thousands of barrels per day](crudeoil_files/image004.png)
+
+## Production of Crude, Gasoline, and Distillates
 
 The figures below show the number of wells in 2008 and 2013 and demonstrates the rapid development of the crude oil extraction industry in the region. 
 
