--- a/Chapter17.Rmd
+++ b/Chapter17.Rmd
@@ -13,6 +13,86 @@ bibliography: PriceAnalysis.bib
 
 # Introduction
 
+Ethanol production and consumption begin to increase rapidly around 2005, which is when the Energy Policy Act of 2005 and later the Energy Security and Independence Act of 2007 created the Renewable Fuels Standard (RFS). The RFS mandated quantities of ethanol that blenders of gasoline are required to blend into the retail gasoline supply. These annual mandates are revised every year, but they were designed to steadily increase year after year until 2015 when the mandate reached 15 billion gallons per year. This figure came about because gasoline consumption in the United States was forecast to reach 150 billion gallons per year by 2015. So the RFS mandates were designed to reach the point where the entire retail gasoline supply would include 10% ethanol. 
+
+The EPA released [final rules](http://www2.epa.gov/renewable-fuel-standard-program/final-renewable-fuel-standards-2014-2015-and-2016-and-biomass-base-0) regarding RFS for volume requirements of biofuels for 2014, 2015, and 2016 on November 30, 2015. 
+
+
+
+|                                         | 	2014 |	2015	|  2016  |  2017    | % Reduction in Greenhouse Gas Emissions |
+|:----------------------------------------|:------:|:------:|:------:|:--------:| :--------:|
+| Cellulosic biofuel (million gallons)   	|  33    |  	123 |  	230	 |   n/a    | > 60%     |
+| Biomass-based diesel (billion gallons)  | 1.63   | 	1.73  | 	1.90 |	2.00    | > 50%     |
+| Advanced biofuel (billion gallons)      | 	2.67 | 2.88	  |  3.61  | n/a      | > 50%     |
+| Total Renewable fuel (billion gallons)      	| 16.28  |	16.93 |	18.11  | 	n/a  | > 20%  |
+
+: Table 1: Renewable Fuel Mandated Volumes for 2014, 2015, 2016, and 2017 
+
+Note: Units for all volumes are ethanol-equivalent, except for biomass-based diesel volumes which are expressed as physical gallons.|
+
+Advanced biofuel is defined as fuel made from renewable sources that provides greater than 50% reduction in greenhouse gas emissions than the renewable fuel they replace. Cellulosic biofuel and biomass-based diesel are considered advanced biofuels, so the cellulosic and biomass-based diesel requirements comprise 2.13 billion gallons of the 3.61 billion gallon advanced biofuel requirement. This leaves 1.48 billion billion gallons in undifferentiated advanced biofuel in the mandate. This will most likely be fulfilled by importing sugarcane-based ethanol from brazil, since the greenhouse gas emission reductions for sugarcane-based ethanol is accepted as an advanced biofuel and considered to have greater than 50% reduction in greenhouse gas emissions. 
+
+Since ethanol production is a significant user of corn, and has important price impacts, it is useful to calculate the implied corn usage under the RFS mandates. First, with an 18.11 billion gallon total renewable fuel requirement, and a 3.61 advanced biofuel requirement, that leaves $18.11 - 3.61 = 14.5$ billion gallons of the total renewable fuel requirement than can be met with conventional biofuel, like corn-based ethanol. Assuming an ethanol plant yields 2.8 gallons of ethanol per bushel of corn, that is an implied usage mandate of 5.17 billion bushels corn. This is spot on with the November 2015 WASDE's estimate of Ethanol usage for the 2015/2016 marketing year of 5.175 billion bushels. 
+
+In the sections that follow the basic ethanol production process is presented. We discuss the by-product of ethanol production, distillers dried grains (DDGs), and its importance to the livestock industry. Then we will discuss some important price relationships involving ethanol, including the ethanol-RBOB gasoline price relationship, and the ethanol-corn-natural gas-DDGs price relationship. 
+
+
+# Ethanol Production[^wikiinfo]
+
+[^wikiinfo]: The information about ethanol production predominately comes from the [corn ethanol](https://en.wikipedia.org/wiki/Corn_ethanol) Wikipedia page. 
+
+Ethanol production takes place at biorefineries [all across the country](http://www.ethanolrfa.org/resources/biorefinery-locations/), but produciton is concentrated in the corn belt. Ethanol plants take advantage of the plentiful supplies of corn and the realtively favorable basis in the corn belt. Some plants are located close to major livestock feeding operations. If you click the source link for the map below and zoom in to look more closely at Kansas you will see a few ethanol plants located in the vicinity of the cattle feedlots we explored in an earlier chapter.  
+
+![Figure 1: Ethanol Plant Locations in the U.S.](images/eth_locations.png)
+
+Source: [Renewable Fuels Association](http://www.ethanolrfa.org/resources/biorefinery-locations/)
+
+Corn-based ethanol can be produced via two methods. Dry grind, and wet grind. 
+
+## Dry Grind Ethanol Production
+
+In dry grind ethanol production, the entire kernal of corn is ground into a meal and mixed with water to create a slurry. Then enzimes are added to convert the starches in the slurry to simple sugar. Ammonia and yeast are added, and the yeast ferments the slurry and converts the slurry into ethanol and carbon dioxide. The ethanol is dehydrated to 200 proof and then a little gasoline is added to make the product undrinkable. 
+
+What is left over after the sugars have been converted to ethanol is called stillage. This product is dehydrated and sold as livestock feed called DDGs. More on the economics of DDGs in the section that follows. So dry-grind ethanol production involves two revanue streams, ethanol and DDGs. 
+
+![Figure 1: An Ethanol Plant](images/640px-Ethanol_plant.jpg)
+
+"<a href="https://commons.wikimedia.org/wiki/File:Ethanol_plant.jpg#/media/File:Ethanol_plant.jpg">Ethanol plant</a>". Licensed under Public Domain via <a href="//commons.wikimedia.org/wiki/">Wikimedia Commons</a>.
+
+Follow the link to a Google Maps satellite view of [Lincolnway Energy LLC, Ames, IA](https://www.google.com/maps/place/Lincolnway+Energy+LLC/@42.0259566,-93.5094383,1084m/data=!3m1!1e3!4m2!3m1!1s0x0000000000000000:0xe75269d9c81692ab!6m1!1e1). Note the location. The ethanol plant is located directly next to Key Cooperative, and both have access to a railhead. 
+
+
+## Wet Grind Ethanol Production
+
+Unlike dry grind ethanol production, in the wet grind process whole corn kernals are steeped in a combination of sulfuric acid and water to separate the kernal into its components: pericarp (or skin), the endosperm (which contains the starch), and germ (which contains the oil). Pre-processing the corn in this way allows fermentation to be done on the starchy part alone, and corn oil and corn bran (from the pericarp) can be extracted separately. The wet-grind ethanol production involves three revanue streams, ethanol, corn oil, and corn bran. 
+
+Wet grind ethanol production is more costly than dry grind, so the majority of corn-based ethanol production capacity is of the dry grind type. 
+
+
+# Distiller's Grains: A by Product Used for Livestock Feed
+
+[Images of DDGs](https://www.google.com/search?q=ddgs&source=lnms&tbm=isch&sa=X&ved=0ahUKEwj4udmomr7JAhWF2B4KHailApcQ_AUICCgC&biw=1920&bih=1031#)
+
+## DDG Prices
+
+
+
+
+# Ethanol Prices
+
+
+
+# Ethanol and Gasoline Price Relationship
+
+
+
+# Ethanol, Corn, DDGS, and Natural Gas Price Relationship
+
+[Iowa State University Ethanol Plant Economic Model](https://www.extension.iastate.edu/agdm/articles/hof/HofJan08.html)
+
+# The Crush Spread
+
+
 # Readings
 
 
