--- a/HowtoFind.Rmd
+++ b/HowtoFind.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Chapter 2: How to Find Information about Commodity Markets"
+title: "How to Find Information about Commodity Markets"
 output:  
     html_document:
         toc: true
