--- a/EthanolMarketsand.Rmd
+++ b/EthanolMarketsand.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Chapter 17: Ethanol Markets and the Corn Crush Spread'
+title: 'Ethanol Markets and the Corn Crush Spread'
 csl: american-journal-of-agricultural-economics.csl.txt
 output:
   html_document:
