--- a/TheSoybeanCrush.Rmd
+++ b/TheSoybeanCrush.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Chapter 13: The Soybean Crush'
+title: 'The Soybean Crush'
 csl: american-journal-of-agricultural-economics.csl.txt
 output:
   html_document:
