--- a/IntroductiontoCommodity-Lecture.Rmd
+++ b/IntroductiontoCommodity-Lecture.Rmd
@@ -1,22 +1,27 @@
 ---
 title: "ACE 427 Commodity Price Analysis and Forecasting"
-author: "Instructor: Mindy L. Mallory,  TA: Quanbiao Shang"
-output: slidy_presentation
-theme: uulm
+author: "Mindy L. Mallory"
+output:
+  slidy_presentation:
+    css: stylesheets/slide-style.css
 ---
+
+
 
 # Long Term Agricultural Price Trends
 
+
 It is useful to begin our exploration of agricultural prices from a long term historical perspective. The figure below is monthly prices received by farmers in the U.S. from 1908 to 2015. By simple visual inspection there seems to be three periods of stable prices, from 1908-1973, 1974-2006, and 2007-present. Although the most recent period seems to be the most volatile and provides less confidence that a similar pattern will persist going forward. 
 
-![Corn Prices Recieved](images\Ch1_PricesRecieved_files\image001.png)
+![Corn Prices Recieved](Excel-files\IntroductiontoCommodity_files\image001.png)
 Source([http://www.nass.usda.gov/](http://www.nass.usda.gov/))
 
 # Long Term Agricultural Price Trends
 Now lets zoom in on the 1974-2015 periods. 
 
-![Corn Prices Recieved](images\Ch1_PricesRecieved_files\image003.png)
+![Corn Prices Recieved](Excel-files\IntroductiontoCommodity_files\image003.png)
 Source([http://www.nass.usda.gov/](http://www.nass.usda.gov/))
+
 
 Looking at these two charts together, there is a clear run-up in prices in the 1970's and again around 2006-2007. What caused these seemingly permanent price hikes?  
 
