--- a/PrimerforGrain-Lecture.Rmd
+++ b/PrimerforGrain-Lecture.Rmd
@@ -1,19 +1,14 @@
 ---
-title: "Primer for Grain and Oilseed Markets"
-output:  
-    html_document:
-        toc: true
-        fig_caption: yes
-        css: stylesheets/github-light.css
+title: "ACE 427 Commodity Price Analysis and Forecasting"
+author: "Mindy L. Mallory"
+output:
+  slidy_presentation:
+    css: stylesheets/slide-style.css
 bibliography: PriceAnalysis.bib
-csl: american-journal-of-agricultural-economics.csl.txt
 ---
 
+# Primer for Grain and Oilseed Markets
 
-
-# [Return to Book Homepage](http://mindymallory.github.io/PriceAnalysis/)
-
-# Introduction 
 
 Since commodities are natural things that are subject to biological processes, you must first understand the basic biological processes involved in the commodity's production in order to understand and anticipate what happens to it's price. This chapter introduces the basic production processes and timeline for major grains and oilseeds: Corn, Soybeans, Hard Red Winter Wheat (KC wheat), Hard Red Spring Wheat (Minneapolis wheat), and Soft Red Winter Wheat. 
 
@@ -21,13 +16,17 @@ Since commodities are natural things that are subject to biological processes, y
 
 In the Corn Belt corn is planted from about March to May, and harvested from September to October. Pollination usually occurs in July. Since pollination is key to production and yield, new crop futures prices tend to be highly variable in the months of June and July as weather patterns and realizations of heat and rainfall mean the difference between a high yielding year and low yielding year. 
 
+# Corn
+
 Of lesser concern, but still followed by market participants is the weather during planting and harvest. Sometimes it is too wet, making it difficult to get acreage planted in a timely manner. If corn is planted too late it may suffer a yield penalty. Also, weather during harvest can impact prices. If harvest time is very wet, it can make it difficult to get the crop out and dry before it is damaged. 
 
 ![Figure 1: Corn Planted Acres 2015](https://www.nass.usda.gov/Charts_and_Maps/Crops_County/images/CR-PL15-RGBChor.png)
 
-## Recent Trends in Acreage, Yields, Production, and Use
+# Recent Trends in Acreage, Yields, Production, and Use
 
 Corn planted acres in the U.S. has varied from just under to just over 90 million acres in recent years. Farmers in the corn belt decide how much of their land to plant to corn and how much to plant to soybeans. So sometimes it is said in the spring that corn and soybeans are 'competing for acres' based on the relative new crop futures prices of corn and soybeans. If corn is more profitable, farmers will shift some acres toward corn, and if soybeans are more profitable farmers will shift some acres toward soybeans. Because of this, years with high corn planted acres tend to have lower soybeans planted acres and vice versa.
+
+# Recent Trends in Acreage, Yields, Production, and Use
 
 Seed hybrids and genetic modification have lead to dramatic increases in yield over the last 100 years. Although, corn planted acres have been relatively flat for a very long time, production has skyrocketed. 
 
@@ -35,18 +34,25 @@ The following figures [come from](http://www.ers.usda.gov/topics/crops/corn/back
 
 ![Figure 1: Corn Planted Acres and Yield](http://www.ers.usda.gov/ImageGen.ashx?image=/media/107021/cornplantedacresandyield.jpg&width=459)
 
+# Recent Trends in Acreage, Yields, Production, and Use
+
 Corn prices can be quite volatile, with prices and production highly inversely related to one another. 
 
 ![Figure 2: Corn Price Recieved by Farmers and Production](http://www.ers.usda.gov/ImageGen.ashx?image=/media/521712/cornpricereceivedandproduction.jpg&width=459)
 
+# Recent Trends in Acreage, Yields, Production, and Use
 
 Corn is used in the U.S for a variety of purposes. Largest use categories are feed (for livestock), and alcohol for fuel use (ethanol blended with gasoline). 
 
 ![Figure 3: Corn Domestic Use Categories](http://www.ers.usda.gov/ImageGen.ashx?image=/media/521847/cornuse.jpg&width=480)
 
+# Recent Trends in Acreage, Yields, Production, and Use
+
 Corn is a global commodity, and the U.S. is the worlds largest producer and exporter of corn. 
 
 ![Figure 4: Largest Exporters of Corn](http://www.ers.usda.gov/ImageGen.ashx?image=/media/521905/cornexporters.jpg&width=480)
+
+# Recent Trends in Acreage, Yields, Production, and Use
 
 ![Figure 5: Largest Importers of Corn](http://www.ers.usda.gov/ImageGen.ashx?image=/media/522027/cornimporters.jpg&width=480)
 
@@ -57,13 +63,18 @@ Soybeans are planted later than corn, from about April to June. Weather affects 
 
 
 
-## Recent Trends in Acreage, Yield, Production, and Use
+# Recent Trends in Acreage, Yield, Production, and Use
 
 Soybeans did not begin to be commercially grown in the U.S. until the mid 20th century, but once it was introduced, acreage expanded rapidly. Soybeans have also benefited from improved yields due to biotechnology. 
 
 ![Figure 6: Soybean Planted Acres and Yield](http://www.ers.usda.gov/ImageGen.ashx?image=/media/106959/topicpagecharts_3765_image001.png&width=480)
 
+# Recent Trends in Acreage, Yield, Production, and Use
+
+
 Soybeans consumed in the U.S. are almost exclusively processed into soybean meal and soybean oil, a process referred to as 'crushing'. Soybean meal is high in protein and used as an ingredient in livestock feed. Soybean oil is used for a variety of things, but the bulk of it is consumed as edible oil. 
+
+# Recent Trends in Acreage, Yield, Production, and Use
 
 About half of the soybeans produced in the U.S. are exported. 
 
@@ -81,7 +92,7 @@ Blue = HRW
 Gold = HRS  
 Red  = SRW  
 
-## Hard Red Winter Wheat 
+# Hard Red Winter Wheat 
 
 HRW wheat is planted in the fall and lays dormant or grows very little during the winter. As temperatures rise in the spring, wheat plants start to grow. It looks like grass before it is mature. During April and May the wheat plants make 'heads' where the wheat kernels grow. When the plants die the grain is harvested. 
 
@@ -93,7 +104,7 @@ Hard Red Winter Wheat is sometime called Kansas City Wheat because the Kansas Ci
 
 (Source [USDA-GIPSA](https://www.gipsa.usda.gov/fgis/commgallery/gr_hrw.aspx))
 
-## Hard Red Spring Wheat
+# Hard Red Spring Wheat
 
 Hard red spring wheat is planted in the spring, around April or May and is harvested in the fall, around September. It has the highest protein content (13-16%) of all the major wheat varieties, making it high in gluten content, which is good for baking bread. It also is used to blend with lower protein wheat flour varieties to increase the protein content. 
 
@@ -104,7 +115,7 @@ HRS wheat is referred to as Minneapolis Wheat because the [Minneapolis Grain Exc
 
 (Source [USDA-GIPSA](https://www.gipsa.usda.gov/fgis/commgallery/gr_hrs.aspx))
 
-## Soft Red Winter Wheat
+# Soft Red Winter Wheat
  
 Soft Red Winter Wheat is planted in the fall, and is harvested in the late spring, like HRW wheat. Soft red winter wheat is lower in protein which makes is suitable for use in cakes, cookies, and crackers, where high gluten content is not required. 
 
