--- a/PrimerforGrain-Lecture.Rmd
+++ b/PrimerforGrain-Lecture.Rmd
@@ -14,20 +14,25 @@ Since commodities are natural things that are subject to biological processes, y
 
 # Corn
 
-What's the difference between Sweet Corn I get from the grocery store and field corn (the focus of much of this course)?
+What's the difference between Sweet Corn one buys from the grocery store and field corn (the focus of much of this course)?
+
+Sweet corn has been bred so that the kernals contain a high sugar content. It is harvested green (as you probably knew), and must be consumed quickly, or processed by canning or freezing within a few hours. After a few hours, the sugars in the kernals begin to turn to starch.
+
+Since sweet corn is harvested green and deteriorates rapidly, harvest must take place quickly from start to finish.
 
 [Sweet Corn Harvest](https://www.youtube.com/watch?v=4WEYDx82fG8)
 
 [Field Corn Harvest](https://www.youtube.com/watch?v=zuGVeXqTIaM)
 
 [Soybean Harvest](https://www.youtube.com/watch?v=Ap4XzHOH1VQ)
-
+ 
 # Field Corn
 
 In the Corn Belt corn is planted from about March to May, and harvested from September to October. Pollination usually occurs in July. Since pollination is key to production and yield, new crop futures prices tend to be highly variable in the months of June and July as weather patterns and realizations of heat and rainfall mean the difference between a high yielding year and low yielding year. 
 
 
 Of lesser concern, but still followed by market participants is the weather during planting and harvest. Sometimes it is too wet, making it difficult to get acreage planted in a timely manner. If corn is planted too late it may suffer a yield penalty. Also, weather during harvest can impact prices. If harvest time is very wet, it can make it difficult to get the crop out and dry before it is damaged. 
+
 
 ![Figure 1: Corn Planted Acres 2015](https://www.nass.usda.gov/Charts_and_Maps/Crops_County/images/CR-PL15-RGBChor.png)
 
@@ -70,6 +75,7 @@ Soybeans are planted later than corn, from about April to June. Weather affects 
 
 
 Soybeans did not begin to be commercially grown in the U.S. until the mid 20th century, but once it was introduced, acreage expanded rapidly. Soybeans have also benefited from improved yields due to biotechnology. 
+[Soybean Harvest](https://www.youtube.com/watch?v=Ap4XzHOH1VQ)
 
 ![Figure 6: Soybean Planted Acres and Yield](http://www.ers.usda.gov/ImageGen.ashx?image=/media/106959/topicpagecharts_3765_image001.png&width=480)
 
@@ -78,7 +84,7 @@ Soybeans did not begin to be commercially grown in the U.S. until the mid 20th c
 
 Soybeans consumed in the U.S. are almost exclusively processed into soybean meal and soybean oil, a process referred to as 'crushing'. Soybean meal is high in protein and used as an ingredient in livestock feed. Soybean oil is used for a variety of things, but the bulk of it is consumed as edible oil. 
 
-About half of the soybeans produced in the U.S. are exported. 
+About half of the soybeans produced in the U.S. are exported, and more than half of soybeans exported are [imported by China](http://farmdocdaily.illinois.edu/2015/03/footprint-of-chinese-demand-for-us-soybeans.html).  
 
 ![Figure 7: U.S. Soybean Exports](http://www.ers.usda.gov/ImageGen.ashx?image=/media/132209/topicpagecharts_vd_19612_image001.png&width=480)
 
@@ -132,6 +138,20 @@ SRW wheat is referred to as Chicago Wheat because the Chicago Board of Trade off
 ![Figure 11: Soft Red Winter Wheat](images/SRW-Wheat.jpg)
 
 (Source [USDA-GIPSA](https://www.gipsa.usda.gov/fgis/commgallery/gr_srw.aspx))
+
+
+# Protein Premiums and Wheat Spreads
+
+If you follow wheat markets for long, you will hear discussion of 'protein premiums', that is because flour millers rarely use just one kind of wheat to make their flour. They blend different types of wheat together to make flours of varying protein and gluten levels. 
+
+# Protein Premiums and Wheat Spreads
+
+Different varieties of wheat naturally have different protein levels, as mentioned above. However, there is also a link between yield and protein levels. When yields are high, wheat protein is lower. This means during years where lower protein winter wheat has good yields, there is plenty of wheat, but not neccessarily enough protein. This causes the price of higher protein wheat, like spring wheat, to rise against the price of winter wheat. If winter wheat crops are smaller around the world, the protein content is higher, and spring wheat may not enjoy a large premium agianst winter wheat. 
+
+# Protein Premiums and Wheat Spreads 
+
+Because of this dynamic, the relative prices of Minneapolis, Kansas City, and Chicago wheat futures are closely followed by stakeholders in any of the wheat markets. 
+
 
 
 
